--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel=stylesheet href="style.css">
     <title>Document</title>
 </head>
 
@@ -13,6 +14,8 @@
         eaque dolore, minima voluptatum. Incidunt nobis exercitationem omnis dignissimos qui sunt earum illo, voluptatum
         perferendis?</p>
 
+    <img src="https://images.pexels.com/photos/19112022/pexels-photo-19112022/free-photo-of-black-male-model-posing-in-a-tree.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"
+        alt="" />
     <h1>Hello jaycon madird</h1>
 
 </body>
