change backgroud color and fix alignment

--- a/index.html
+++ b/index.html
@@ -10,22 +10,18 @@
 
 <body>
 
-    <div class="container">
+    <section class="container">
 
-        <div>
-            <h1>Github Crash Course Test</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum voluptate eligendi culpa accusamus sed
-                itaque
-                eaque dolore, minima voluptatum. Incidunt nobis exercitationem omnis dignissimos qui sunt earum illo,
-                voluptatum
-                perferendis?</p>
+        <div class="header">
+            <h1>Github Crash Course!</h1>
+            <h2>Sample test</h2>
         </div>
-        <div>
+        <div class="image-body">
             <h1>Hello jaycon madird</h1>
             <img src="https://images.pexels.com/photos/19112022/pexels-photo-19112022/free-photo-of-black-male-model-posing-in-a-tree.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2"
                 alt="" />
         </div>
-    </div>
+    </section>
 
 </body>
 
